syntax = "proto3";
package  assesement_test_MicroServices;

import "google/protobuf/timestamp.proto";
import "commons.proto";
option go_package = "pb/";


service OfficeService{
  rpc GetOfficeById(ById) returns (OfficeResponse);
  rpc UpdateOffice(UpdateOfficeRequest) returns (OfficeResponse);
  rpc CreateOffice(CreateOfficeRequest) returns (OfficeResponse);
  rpc DeleteOffice(ById) returns (OfficeResponse);
  rpc ListOffices(empty) returns (OfficeResponseRepeated);
}

message Office {
  string BranchCode = 1;
  string BranchName = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  google.protobuf.Timestamp UpdatedAt = 4;
}

message OfficeResponse{
  int64 code=1;
  string message=2;
  Office data=3;
}
message OfficeResponseRepeated{
  int64 code=1;
  string message=2;
  repeated Office data=3;
}
message UpdateOfficeRequest{
  string id=1;
  optional string BranchName=2;
}
message CreateOfficeRequest{
  string BranchName=1;
}